# tga-image-resize

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  exception.cpp  exception.hpp  image_processor.cpp  image_processor.hpp  main.cpp  main.h  main.hpp  tga.cpp  tga.hpp
src/util/: CMakeLists.txt  decoder.cpp  decoder.h  decoder.hpp  encoder.cpp  encoder.h  encoder.hpp  exception.cpp  exception.hpp  image_processor.cpp  image_processor.h  image_processor.hpp  tga.cpp  tga.h  tga.hpp
test/: CMakeLists.txt
test/src/: halfsize_tests.cpp
